--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
 body{
     background-color: #1F2049 !important;
 }
-.application-card {
+/* .application-card {
   position: relative;
   cursor: pointer;
-}
+} */
 
 .application-badge-container {
   position: absolute;
@@ -78,7 +78,7 @@ body{
   background: linear-gradient(
     135deg,
     rgba(220, 38, 38, 0.9) 0%,
-    rgba(185, 28, 28, 0.8) 50%,
+    rgba(185, 28, 28, 0.8) 50%, 
     rgba(153, 27, 27, 0.9) 100%
   );
   color: #ffffff;
